--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: 'Segoe UI', Arial, sans-serif;
   line-height: 1.4;
   color: #444;
   background: #fff;
@@ -30,6 +30,7 @@ body {
 }
 
 .form-container {
+  position: relative;
   width: 100%;
   margin-bottom: 20px;
   display: flex;
@@ -148,4 +149,53 @@ body {
   width: 100%;
   padding: 10px;
   border: 1px solid #dfdfdf;
+}
+
+.dropdown {
+  position: absolute;
+  display: block;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 9px 5px 0px;
+  width: 100%;
+  max-height: 165px;
+  top: 55px;
+  background-color: #ffffff;
+  border: 1px solid #dedede;
+  box-shadow: 0px 0px 1px rgba(50, 50, 50, 0.05), 0px 2px 4px rgba(50, 50, 50, 0.1);
+  border-radius: 5px;
+  z-index: 1;
+}
+
+.dropdown-item {
+  display: block;
+  line-height: 28px;
+  padding: 0px 12px;
+  width: 100%;
+  height: 28px;
+}
+
+.dropdown-item:hover {
+  background-color: #f2f2f2;
+}
+
+.dropdown-logo {
+  position: sticky;
+  background-color: #fff;
+  line-height: 28px;
+  padding: 0px 12px;
+  width: 100%;
+  height: 28px;
+  bottom: 0px;
+}
+
+.dropdown-logo img {
+  display: block;
+  height: inherit;
+  width: 12px;
+  margin: 0 auto;
+}
+
+.dropdown-spinner {
+  animation: spin 2s linear infinite;
 }
