--- a/src/App.css
+++ b/src/App.css
@@ -34,18 +34,35 @@ body {
   width: 100%;
   margin-bottom: 20px;
   display: flex;
-  border-radius: calc(0.5 * 100px);
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.38);
+  border-radius: 6px;
+  outline: 1px solid #dedede;
   justify-content: space-evenly;
+}
+
+.form-container:hover {
+  outline: 3px solid #dedede;
+}
+
+.form-container:focus-within {
+  outline: 1px solid #9f9f9f;
+}
+
+.search-div {
+  height: 100%;
+  line-height: 45px;
+}
+
+.search-icon {
+  vertical-align: middle;
 }
 
 .input-text {
   font-size: 1rem;
   font-weight: 400;
   width: 85%;
-  padding-right: 5px;
-  padding-left: 10px;
-  border-radius: calc(0.5 * 100px);
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding: 0px 5px;
   background-color: transparent;
 }
 
@@ -136,6 +153,13 @@ body {
   align-self: center;
 }
 
+.filler {
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-self: center;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -143,12 +167,6 @@ body {
   100% {
     transform: rotate(360deg);
   }
-}
-
-.textInput {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #dfdfdf;
 }
 
 .dropdown {
