--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,11 @@ body {
 
 .dropdown-item:hover {
   background-color: #f2f2f2;
+  cursor: default;
+}
+
+.dropdown-item:active {
+  background-color: #d5f4f1;
 }
 
 .dropdown-logo {
