--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,20 @@ body {
   height: 100vh;
 }
 
+.header {
+  padding: 20px 0;
+  line-height: 1.5em;
+}
+
+.header .title {
+  font-size: 6rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+  line-height: 1em;
+  color: #ececec;
+  text-align: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
